# MAI-OOP-LAB4

./: .gitignore  README.md
lab4/: CMakeLists.txt  main.cpp
lab4/include/: array.hpp  figure.hpp  point.hpp  rectangle.hpp  shapes.hpp  square.hpp  trapezoid.hpp
lab4/test/: test.cpp
